# filterbank-generation-test

./: .clang-format  .gitignore  CMakeLists.txt  README.md
cmake/: dev-mode.cmake  install-rules.cmake  variables.cmake
from_baseband/: CMakePresets.json  android-build.txt
from_baseband/cmake/: install-config.cmake
from_baseband/source/: checks.hpp  draw.py  draw_filterbank.py  global_variable.hpp  kernel.hpp  main.cpp  plot-tim.py
from_baseband/test/: CMakeLists.txt
source/: benchmark.hpp  draw.py  draw_filterbank.py  io.hpp  kernel.hpp  main.cpp  pad_filterbank.cpp  types.h
udp_receiver/prototype/: README.md  filterbank-reader.py  srtb_config.py  udp_receiver.cpp  udp_receiver.py
udp_receiver/rust/: Cargo.toml  srtb_config.py
udp_receiver/rust/.cargo/: config.toml
udp_receiver/rust/src/: main.rs
